REFACTORING: Renamed xkcd directive to xkcdComic

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <script src="vendors/angular.min.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/xkcdReader/xkcdComicService.js"></script>
-    <script src="app/xkcdReader/xkcd.js"></script>
+    <script src="app/xkcdReader/xkcdComic.js"></script>
     <script src="app/xkcdReader/xkcdReaderController.js"></script>
     <script src="app/xkcdReader/xkcdReader.js"></script>
 </body>
