REFACTORING: Cleaned up CSS

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1 ng-hide="true">Loading...</h1>
-    <div id="content" ng-cloak><xkcd-reader></xkcd-reader></div>
-
+    <div class="centered-block" id="content" ng-cloak>
+        <xkcd-reader></xkcd-reader>
+    </div>
 
     <script src="vendors/angular.min.js"></script>
     <script src="app/app.module.js"></script>
