Replaced initial text loader with CSS loader

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title></title>
 </head>
 <body>
-    <h1 ng-hide="true">Loading...</h1>
+    <div class="centered-block loader" ng-hide="true"></div>
+
     <div class="centered-block" id="content" ng-cloak>
         <xkcd-reader></xkcd-reader>
     </div>
