Comic loading indicator now displays until the comic image is finished downloading.

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <script src="vendors/angular.min.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/xkcdReader/xkcdComicService.js"></script>
+    <script src="app/xkcdReader/xkcdShowLoader.js"></script>
     <script src="app/xkcdReader/xkcdComic.js"></script>
     <script src="app/xkcdReader/xkcdReaderController.js"></script>
     <script src="app/xkcdReader/xkcdReader.js"></script>
