--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     </div>
 
     <script src="vendors/angular.min.js"></script>
+    <script src="vendors/angular-animate.min.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/xkcdReader/xkcdComicService.js"></script>
     <script src="app/xkcdReader/xkcdComic.js"></script>
