--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html ng-app="app" lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="resources/css/animate.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <title></title>
 </head>
