--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
     <script src="vendors/angular.min.js"></script>
     <script src="vendors/angular-animate.min.js"></script>
+    <script src="vendors/ngAnimateSwap.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/xkcdReader/ngAnimateDisable.js"></script>
     <script src="app/xkcdReader/xkcdComicService.js"></script>
