--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="resources/css/animate.css">
     <link rel="stylesheet" href="resources/css/style.css">
-    <title></title>
+    <title>XKCD Reader test page</title>
 </head>
 <body>
     <div class="centered-block loader" ng-hide="true"></div>
